# zeta-simulation

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  PERMISSIONS.md  README.md  commands.txt  main.py  pyproject.toml  requirements.txt  setup.py  zeta_detailed_results.csv
.github/workflows/: ci.yml
tests/: test_learning.py  test_pipeline.py  test_safety.py  test_world_model.py
zeta/: __init__.py  config.py  learning.py  pipeline.py  safety.py  world_model.py
